<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, UdrunkActivity!</string>
    <string name="app_name">Udrunk</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="username">User name</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="validate">Validate</string>
    <string name="share_title">Share</string>
    <string name="share">Share</string>
    <string name="iamhere">I\'m here!</string>
    <string name="place_title">Place Details</string>
    <string name="img_description_avatar">Udrunk</string>
    <string name="message">Message</string>

    <string-array
        name="viewpager_titles">
        <item>Me</item>
        <item>Feeds</item>
        <item>Places</item>
    </string-array>
    
    
    <string name="todayat">Today at %s</string>
    <string name="yesterdayat">Yesterday at %s</string>
    <plurals name="seconds_ago">
        <item quantity="one">%d second ago</item>
        <item quantity="other">%d seconds ago</item>
    </plurals>
    <plurals name="minutes_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="days_ago">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="months_ago">
        <item quantity="one">%d month ago</item>
        <item quantity="other">%d months ago</item>
    </plurals>

</resources>